ISPN-11172 Remap container uid/gid to fix permissions with mounted volumes
* Normalize server driver timeouts
* Start scripting cache on cache manager start