@@ -204,6 +204,7 @@
          --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
          --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
          --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
+         --add-exports=jdk.security.auth/com.sun.security.auth.module=ALL-UNNAMED
          --add-modules=java.se
       </testjvm.jigsawArgs>
       <testjvm.extraArgs/>
